--- a/Views/Peralatan/index.cshtml
+++ b/Views/Peralatan/index.cshtml
@@ -159,8 +159,8 @@
         <div class="card-header d-flex flex-wrap align-items-center justify-content-between gap-2">
           <div>
             <h3 class="card-title mb-0">Peralatan</h3>
-            <div class="small text-muted">Pencarian, filter, sortir, dan pagination di server. Menampilkan <b>hanya yang
-                belum Exp</b>.</div>
+            <div class="small text-muted">Pencarian, filter, sortir Peralatan. Menampilkan Semua Data Peralatan<b></b>.
+            </div>
           </div>
 
           <form method="get" class="d-flex flex-wrap align-items-end gap-2">
@@ -216,8 +216,8 @@
             </div>
           </form>
           <div class="d-flex gap-2">
-            <a class="btn btn-warning" asp-controller="Peralatan" asp-action="Expired">
-              <i class="bi bi-fire me-2"></i> Peralatan Expired
+            <a class="btn btn-warning" asp-controller="Peralatan" asp-action="History">
+              <i class="bi bi-fire me-2"></i> Riwayat Peralatan
             </a>
             <a class="btn btn-success" asp-action="Create">
               <i class="fas fa-plus"></i> Tambah Peralatan
