--- a/Views/Checklist/index.cshtml
+++ b/Views/Checklist/index.cshtml
@@ -16,7 +16,7 @@
                             <i class="fas fa-plus"></i> Tambah Checklist
                         </a>
                         <a href="@Url.Action("Bulk")" class="btn btn-success">
-                            <i class="fas fa-layer-group"></i> Bulk Create
+                            <i class="fas fa-layer-group"></i> Buat Banyak Checklist
                         </a>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                                     </h5>
                                     <a href="@Url.Action("ByJenis", new { jenisId = jenisGroup.First().JenisId })" 
                                        class="btn btn-sm btn-outline-primary">
-                                        <i class="fas fa-eye"></i> View All
+                                        <i class="fas fa-eye"></i> Detail
                                     </a>
                                 </div>
                                 
