--- a/Views/RolePetugas/Index.cshtml
+++ b/Views/RolePetugas/Index.cshtml
@@ -82,7 +82,7 @@
                             <input id="searchInput" type="text" class="form-control" placeholder="Cari nama role / deskripsi" value="@q">
                         </div>
 
-                        <select id="intervalFilter" class="form-select">
+                        @* <select id="intervalFilter" class="form-select">
                             <option value="">Semua Interval</option>
                             @if (ViewBag.IntervalList != null)
                             {
@@ -91,13 +91,13 @@
                                     <option value="@it.Nama">@it.Nama</option>
                                 }
                             }
-                        </select>
+                        </select> *@
 
-                        <select id="statusFilter" class="form-select">
+                        @* <select id="statusFilter" class="form-select">
                             <option value="">Semua Status</option>
                             <option value="Aktif">Aktif</option>
                             <option value="Nonaktif">Nonaktif</option>
-                        </select>
+                        </select> *@
 
                         <button id="resetBtn" class="btn btn-light border">
                             <i class="fas fa-undo"></i> Reset
@@ -162,10 +162,10 @@
                                                         <i class="fas fa-eye"></i>
                                                     </a>
                                                     <a href="@Url.Action("Edit", new { id = x.Id })"
-                                                       class="btn btn-sm btn-warning" title="Edit">
+                                                       class="btn btn-sm btn-outline-warning" title="Edit">
                                                         <i class="fas fa-edit"></i>
                                                     </a>
-                                                    <button type="button" class="btn btn-sm btn-danger"
+                                                    <button type="button" class="btn btn-sm btn-outline-danger"
                                                             onclick="confirmDelete(@x.Id, '@x.NamaRole')" title="Hapus">
                                                         <i class="fas fa-trash"></i>
                                                     </button>
